--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "2.2.12",
+    "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.72.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@uploadcare/upload-client": "6.14.3",
@@ -73,6 +74,7 @@
     "react-native-web": "^0.21.0",
     "react-native-web-refresh-control": "^1.1.2",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.6.1",
     "serialize-error": "^12.0.0",
     "sonner-native": "^0.21.0",
     "three": "^0.166.0",
@@ -85,12 +87,6 @@
     "patch-package": "^8.0.0",
     "postcss": "8.5.2",
     "typescript": "~5.8.3"
-  },
-  "overrides": {
-    "@shopify/react-native-skia": "v2.0.0-next.4",
-    "react-native-graph": {
-      "@shopify/react-native-skia": "v2.0.0-next.4"
-    }
   },
   "private": true
 }
