--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "autoprefixer": "10.4.20",
     "patch-package": "^8.0.0",
     "postcss": "8.5.2",
