--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "https://codeload.github.com/craftworkco/react-native-calendars/tar.gz/ae19e2af74ecdb29d6117ca41fbf41977a10cc23",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-graph": "^1.1.0",
     "react-native-maps": "1.20.1",
@@ -69,7 +70,7 @@
     "react-native-reanimated-carousel": "4.0.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-web-refresh-control": "^1.1.2",
